Deprecation updates
BukkitListener updated PlayerPickupEvent to EntityPickupEvent
NBTTools: updated newInstance from deperecated Call
NBTTools: Changed type of nbtTagCompound from Class to Class<?>, this prevents warnings and does effectively the same as before
HyperWebAPI: updated deprecated newInstance Access to new Access
HyperWebAPI: updated construction of Character to use valueOf as proposed by Deprecation